# byakugan

./: .buckconfig  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .watchmanconfig  BUCK  Cargo.toml  Dockerfile  renovate.json  salsa_fixup.py  test_sstable_create_and_read.sst  test_utils.bzl
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: buck2.yml  check.yml  safety.yml  test.yml
crates/lib/cfg/: BUCK  Cargo.toml  build.rs
crates/lib/cfg/src/settings/: log.rs  meta.rs  mod.rs
crates/lib/cli/: BUCK  Cargo.toml
crates/lib/cli/src/: entry.rs  lib.rs
crates/lib/cli/tests/: lib.rs
crates/lib/diagnostics/: BUCK  Cargo.toml
crates/lib/diagnostics/src/: lib.rs
crates/lib/diagnostics/src/errors/: build_tools.rs  cli.rs  log.rs  mod.rs  syntax.rs
crates/lib/driver/: BUCK  Cargo.toml
crates/lib/driver/src/: lib.rs
crates/lib/driver/src/build_tools/: label.rs  mod.rs
crates/lib/driver/src/build_tools/context/: bazel.rs  buck2.rs  cargo.rs  mod.rs
crates/lib/driver/tests/: lib.rs
crates/lib/stones/: BUCK  Cargo.toml
crates/lib/stones/src/: lib.rs  lsmtree.rs  memtable.rs  sstable.rs
crates/lib/stones/tests/: lib.rs  sstable.rs
crates/lib/superconsole/: BUCK  Cargo.toml  README.md
crates/lib/superconsole/oss/: CHANGELOG.md
crates/lib/superconsole/oss/.github/workflows/: ci.yml
crates/lib/utils/: BUCK  Cargo.toml
crates/lib/utils/src/: lib.rs  log.rs
crates/lib/utils/tests/: lib.rs
crates/lib/watch/: BUCK  Cargo.toml
crates/lib/watch/src/: lib.rs
crates/lib/watch/tests/: lib.rs
tools/buck/: buildscript.bzl
tools/buck/prelude/apple/tools/: make_modulemap.py  make_vfsoverlay.py
tools/buck/prelude/cxx/dist_lto/: README.md
tools/buck/prelude/cxx/dist_lto/tools/: dist_lto_opt.py  dist_lto_planner.py  dist_lto_prepare.py
tools/buck/prelude/cxx/tools/: make_comp_db.py
tools/buck/prelude/go/tools/: compile_wrapper.py  cover_srcs.py  testmaingen.go
tools/buck/prelude/http_archive/tools/: create_exclusion_list.py
tools/buck/prelude/java/tools/: gen_class_to_source_map.py  merge_class_to_source_maps.py  used_classes_to_dep_file.py
tools/buck/prelude/julia/tools/: parse_julia_cmd.py
tools/buck/prelude/python/tools/: __test_main__.py  extract.py  make_pex_inplace.py  make_pex_manifest_module.py  make_pex_modules.py  parse_imports.py  py38stdlib.py  static_extension_finder.py  traverse_dep_manifest.py
tools/buck/prelude/python/tools/sourcedb_merger/: inputs.py  legacy_outputs.py
tools/buck/prelude/python/tools/sourcedb_merger/tests/: inputs_test.py  legacy_output_test.py
tools/buck/prelude/rust/tools/: rustc_action.py
tools/buck/prelude/test/tools/: inject_test_env.py
tools/buck/prelude/zip_file/tools/: unzip.py
