[package]
name = "cfg"
version = "0.1.0"
edition = "2021"

[lib]
doctest = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# atomic = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
# config = { workspace = true }
derivative = { workspace = true }
derive_more = { workspace = true }
derive-new = { workspace = true }
# dirs-next = { workspace = true }
getset = { workspace = true }
humantime = { workspace = true }
log = { workspace = true }
miette = { workspace = true }
# num_cpus = { workspace = true }
# parking_lot = { workspace = true }
pretty_assertions_sorted = { workspace = true }
rstest = { workspace = true }
ulid = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
smartstring = { workspace = true }
smol_str = { workspace = true }
# strum = { workspace = true }
strum_macros = { workspace = true }
sys-locale = { workspace = true }
typed-builder = { workspace = true }
once_cell = { workspace = true }
owo-colors = { workspace = true }
