[package]
name = "driver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg = { path = "../cfg" }
cli = { path = "../cli" }
diagnostics = { path = "../diagnostics" }
utils = { path = "../utils" }
watch = { path = "../watch" }

clap = { workspace = true }
derivative = { workspace = true }
derive_more = { workspace = true }
derive-new = { workspace = true }
dirs-next = { workspace = true }
getset = { workspace = true }
lazy_static = { workspace = true }
miette = { workspace = true }
owo-colors = { workspace = true }
pretty_assertions_sorted = { workspace = true }
regex = { workspace = true }
shrinkwraprs = { workspace = true }
smartstring = { workspace = true }
strsim = { workspace = true }
strum_macros = { workspace = true }
tracing = { workspace = true }
typed-builder = { workspace = true }
