[package]
name = "utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
derive-new = { workspace = true }
derive_more = { workspace = true }
getset = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
typed-builder = { workspace = true }
once_cell = { workspace = true }
owo-colors = { workspace = true }
