[package]
name = "utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg = { path = "../cfg" }
diagnostics = { path = "../diagnostics" }

anyhow = { workspace = true }
chrono = { workspace = true }
derivative = { workspace = true }
derive-new = { workspace = true }
derive_more = { workspace = true }
dirs-next = { workspace = true }
fern = { workspace = true }
getset = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
miette = { workspace = true }
pretty_assertions_sorted = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
shrinkwraprs = { workspace = true }
smartstring = { workspace = true }
textwrap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
typed-builder = { workspace = true }
unicode-width = { workspace = true }
once_cell = { workspace = true }
owo-colors = { workspace = true }
whoami = { workspace = true }
