[package]
name = "watch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
derive-new = { workspace = true }
derive_more = { workspace = true }
downcast-rs = { workspace = true }
dyn-clone = { workspace = true }
getset = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
shrinkwraprs = { workspace = true }
smartstring = { workspace = true }
typed-builder = { workspace = true }
once_cell = { workspace = true }
owo-colors = { workspace = true }
